@@ -46,5 +46,9 @@ qmake -o Makefile Ratio.pro
 make
 cp libRatio.so.0.2.0 Ratio.so
 
+qmake -o Makefile CC.pro
+make
+cp libCC.so.0.2.0 CC.so
+
 rm -f lib*
 
